add compare notification

--- a/scss/components/component-facets.scss
+++ b/scss/components/component-facets.scss
@@ -972,6 +972,9 @@ input.mobile-facets__checkbox {
       padding: 20px;
       background-color: var(--color-input-background);
       box-shadow: 0 0 5px rgba(0,0,0, .1);
+      position: sticky;
+      top: 90px;
+      left: 0;
     }
   }
 
