--- a/sections/compare-notification.liquid
+++ b/sections/compare-notification.liquid
@@ -37,37 +37,38 @@
                     <h5 class="modal__title js-item-notification-title">{{ title }}</h5>
                 </div>
 
-                {% if action[1] == 'addcompare' %}
-                    <p class="modal__msg modal__msg--successfully">
-                        {% render 'icons-svg', icons: 'check' -%}
-                        {{- 'products.product.compare_successfully' | t }}
-                    </p>
-                {% endif %}
-                {% if action[1] == 'addwishlist' %}
-                    <p class="modal__msg modal__msg--successfully">
-                        {% render 'icons-svg', icons: 'check' -%}
-                        {{- 'products.product.wishlist_successfully' | t }}
-                    </p>
-                {% endif %}
-                {% if action[1] == 'fullcompare' %}
-                    <p class="modal__msg modal__msg--notice">
-                        {% render 'icons-svg', icons: 'check' -%}
-                        {{- 'products.product.compare_full' | t }}
-                    </p>
-                {% endif %}
-
-                {% if action[1] == 'removecompare' %}
-                    <p class="modal__msg modal__msg--remove">
-                        {% render 'icons-svg', icons: 'error' -%}
-                        {{- 'products.product.compare_remove.one' | t: product_title: title }}
-                    </p>
-                {% endif %}
-                {% if action[1] == 'removewishlist' %}
-                    <p class="modal__msg modal__msg--remove">
-                        {% render 'icons-svg', icons: 'error' -%}
-                        {{- 'products.product.wishlist_remove.one' | t: product_title: title }}
-                    </p>
-                {% endif %}
+                {% case action[1] %}
+                    {% when 'addcompare' %}
+                        <p class="modal__msg modal__msg--successfully">
+                            {% render 'icons-svg', icons: 'check' -%}
+                            {{- 'products.product.compare_successfully' | t }}
+                        </p>
+                    {% when 'addwishlist' %}
+                        <p class="modal__msg modal__msg--successfully">
+                            {% render 'icons-svg', icons: 'check' -%}
+                            {{- 'products.product.wishlist_successfully' | t }}
+                        </p>
+                    {% when 'fullcompare' %}
+                        <p class="modal__msg modal__msg--notice">
+                            {% render 'icons-svg', icons: 'check' -%}
+                            {{- 'products.product.compare_full' | t }}
+                        </p>
+                    {% when 'fullwishlist' %}
+                        <p class="modal__msg modal__msg--notice">
+                            {% render 'icons-svg', icons: 'check' -%}
+                            {{- 'products.product.wishlist_full' | t }}
+                        </p>
+                    {% when 'removecompare' %}
+                        <p class="modal__msg modal__msg--remove">
+                            {% render 'icons-svg', icons: 'error' -%}
+                            {{- 'products.product.compare_remove.one' | t: product_title: title }}
+                        </p>
+                    {% when 'removewishlist' %}
+                        <p class="modal__msg modal__msg--remove">
+                            {% render 'icons-svg', icons: 'error' -%}
+                            {{- 'products.product.wishlist_remove.one' | t: product_title: title }}
+                        </p>
+                {% endcase %}
 
                 <div class="modal__button">
                     <a href="/collections/all" class="button button--link js-modal-close">
