--- a/sections/main-head.liquid
+++ b/sections/main-head.liquid
@@ -119,7 +119,7 @@
         {
             "type": "richtext",
             "id": "collections_text",
-            "label": "Heading"
+            "label": "Text"
         },
         {
             "type": "text",
